# metaclass

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/Metaclass/: BaseGet.h  BaseSet.h  Metabase.h  Metaclass.h  MetastreamGet.h  MetastreamSet.h  PropertyGet.h  PropertySet.h  SetterPull.h
sandbox/: CMakeLists.txt  main.cpp
src/: Metabase.cpp  Metaclass.cpp  MetastreamGet.cpp  MetastreamSet.cpp
