cmake_minimum_required(VERSION 3.0)

PROJECT(sandbox)

MACRO( ADD_FILTER group_name )
	SOURCE_GROUP( ${group_name} FILES ${ARGN} )
	SET( SRC_FILES ${SRC_FILES} ${ARGN} )
ENDMACRO()

ADD_FILTER(
Sandbox
    main.cpp
)

INCLUDE_DIRECTORIES( ${PROJECT_NAME} ../include ) 

ADD_EXECUTABLE( ${PROJECT_NAME} WIN32 ${SRC_FILES} )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} Metaclass )